cabal-version:        2.4
name:                 lyah
version:              0.1.4
license:              AGPL-3.0-only
license-file:         etc/LICENSE-AGPLv3.txt
maintainer:           Americo Zuzunaga
synopsis:             Follow along repo for http://learnyouahaskell.com/
category:             Education
description:          Follow along repo for http://learnyouahaskell.com/
homepage:             https://github.com/azuzunaga/lyah
bug-reports:          https://github.com/azuzunaga/lyah/issues
build-type:           Simple
tested-with:          GHC == 8.4.4
extra-source-files:   CHANGELOG.org

common base
  build-depends:
    base < 5 && >= 4
    , containers >= 0.4
    , array >= 0.4
    , aeson
    , bytestring
    , lens-aeson
    , lens
    , text
    , text-conversions
    , http-types
    , wai
  ghc-options:
    -Wall
    -Wno-dodgy-exports
    -fwarn-incomplete-uni-patterns
    -fno-warn-unused-binds
    -fno-warn-unused-do-bind
    -fno-warn-unused-imports
    -fno-warn-type-defaults
    -ferror-spans
  default-extensions:
    InstanceSigs
    OverloadedStrings
    ScopedTypeVariables
    DeriveGeneric
    KindSignatures
  default-language:
    Haskell2010

common tests
  other-modules:
  build-depends:
    lyah
    , base < 5 && >= 4
    , text
    , HUnit >= 1.5
    , hedgehog >= 0.6.1
    , tasty >= 1
    , tasty-hunit >= 0.9
    , tasty-hedgehog >= 0.2
    , webdriver
  ghc-options:
    -threaded
  default-extensions:
    InstanceSigs
    OverloadedStrings
    ScopedTypeVariables
  default-language:
    Haskell2010

common apps
  build-depends:
    base < 5 && >= 4
    , aeson
    , aeson-lens
    , attoparsec
    , bytestring
    , lyah
    , json-stream
    , http-types
    , lens
    , io-streams
    , streaming
    , streaming-bytestring
    , streaming-utils
    , wai
    , warp
    , wreq

library
  import:
    base
  hs-source-dirs:
    src
  exposed-modules:
    Lyah
    Lyah.StartingOut
